<!--
  ~ JoozdLog Pilot's Logbook
  ~ Copyright (C) 2020 Joost Welle
  ~
  ~     This program is free software: you can redistribute it and/or modify
  ~     it under the terms of the GNU Affero General Public License as
  ~     published by the Free Software Foundation, either version 3 of the
  ~     License, or (at your option) any later version.
  ~
  ~     This program is distributed in the hope that it will be useful,
  ~     but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~     GNU Affero General Public License for more details.
  ~
  ~     You should have received a copy of the GNU Affero General Public License
  ~     along with this program.  If not, see https://www.gnu.org/licenses
  -->

<resources>
    <string name="app_name">JoozdLog 0.1 WIP</string>
    <string name="flightNumberHint">FlightNumber</string>
    <string name="airFieldHint">Airport</string>
    <string name="dateHint">Date</string>
    <string name="nameHint">Pilot Name</string>
    <string name="aircraftHint">PH-EZA (E190)</string>
    <string name="flightNumber">FlightNumber</string>
    <string name="airField">Airport</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="aircraft">Aircraft</string>
    <string name="search">Search</string>
    <string name="seacrhFlightsHeader">Search Flights</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="close">CLOSE</string>
    <string name="clear">Clear</string>
    <string name="editFlight">Add Flight</string>
    <string name="destination">Destination</string>
    <string name="origin">Origin</string>
    <string name="timeOut">Time Out</string>
    <string name="timeIn">Time In</string>
    <string name="namePic">Name PIC</string>
    <string name="namePilot2">Other names</string>
    <string name="otherCrew">Other Crew</string>
    <string name="remarks">Remarks</string>
    <string name="takeOffLandings">Takeoff / Landing</string>
    <string name="simtTime">Simulator Time</string>
    <string name="pilotFlying">Pilot Flying</string>
    <string name="picus">PICus</string>
    <string name="simluator">Simulator</string>
    <string name="pic">PIC</string>
    <string name="save">Save</string>
    <string name="ifrString">IFR</string>
    <string name="dualString">Dual</string>
    <string name="instructorString">Instructor</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="autovalue">Auto Values</string>
    <string name="undoChanges">Undo Changes</string>
    <string name="selectedName">Selected Name:</string>
    <string name="changeName">Change Name</string>
    <string name="clearAndClose">Clear and Close</string>
    <string name="takeoff">Takeoff</string>
    <string name="day">day</string>
    <string name="night">night</string>
    <string name="landing">Landing</string>
    <string name="autoland">Autoland</string>
    <string name="dayslashnight">day/night</string>
    <string name="connectingToServer">Connecting to server...</string>
    <string name="synchronizing">Synchronizing...</string>
    <string name="sendingDataToServer">Sending data to server...</string>
    <string name="receivingData">Receiving data from server...</string>
    <string name="totalTimes">Total Times</string>
    <string name="balanceForward">Balance Forward</string>
    <string name="editAircraft">Edit Aircraft</string>
    <string name="addBalanceForward">Add Balance Forward</string>
    <string name="logbookName">Name of old logbook</string>
    <string name="totalTime">Total time</string>
    <string name="aircraftTime">Aircraft time</string>
    <string name="takeoffDay">Takeoff day</string>
    <string name="takeoffNight">Takeoff night</string>
    <string name="landingDay">Landing Day</string>
    <string name="landingNight">Landing Night</string>
    <string name="nightTime">Night time</string>
    <string name="ifrTime">IFR time</string>
    <string name="picIncludingPicus">PIC (+ PICUS)</string>
    <string name="copilot">Co-pilot</string>
    <string name="paperLogbook">Paper Logbook</string>
    <string name="pickNames">Search Names</string>
    <string name="anyName">Name</string>
    <string name="addThis">Add This</string>
    <string name="remove">Remove last</string>
    <string name="select">Select</string>
    <string name="pickAirports">Search Airports</string>
    <string name="cleanPastPlanned">Clean planned</string>
    <string name="setThis">Set This</string>
    <string name="flightTimes">Times:</string>
    <string name="augmentedCrew">Augmented crew</string>
    <string name="crewSize">Crew Size</string>
    <string name="landingInSeat">Landing in seat</string>
    <string name="takeoffInSeat">Takeoff in seat</string>
    <string name="timeForTakeoffLanding">Time for takeoff/landing</string>
    <string name="dual">DUAL</string>
    <string name="augmented">Augmented</string>
    <string name="deletedFlight">Deleted Flight!</string>
    <string name="undo">Undo</string>
    <string name="newFlight">New Flight</string>
    <string name="multiPilot">Multipilot</string>
    <string name="registration">Registration</string>
    <string name="newText">New</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model">Model</string>
    <string name="engineType">Engine Type</string>
    <string name="multiEngine">Multi-Engine</string>
    <string name="signature">Signature</string>
    <string name="pf">PF</string>
    <string name="sim">Sim</string>
    <string name="sign">Sign</string>
    <string name="savePdf">Save to PDF</string>>
    <string name="loadingFlights">Loading Flights…</string>
    <string name="loadingSignatures">Loading Signatures…</string>
    <string name="makingPages">Making pages…</string>
    <string name="addManufacturer">Add Manufacturer</string>
    <string name="addModel">Add Model</string>
    <string name="searchAircraft">SearchAircraft</string>
    <string name="loadingAirports">Loading Airports</string>
    <string name="readingFile">Receiving File...</string>
    <string name="savingFlights">Saving Flights...</string>
    <string name="startingJoozdlog">Starting Joozdlog...</string>


</resources>
