<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <!--item android:title="Rebuild from server" android:id="@+id/menu_rebuild"/-->
    <item
            android:id="@+id/app_bar_search"
            android:icon="@drawable/ic_search_white_24dp"
            android:iconTint="@color/white"
            android:title="@string/search"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/menu_add_flight"
            android:icon="@drawable/ic_add_white_48dp"
            android:title="@string/newFlight"
            app:showAsAction="ifRoom" />
    <item
            android:id="@+id/menu_export_pdf"
            android:icon="@android:drawable/ic_menu_save"
            android:title="@string/savePdf"
            app:showAsAction="ifRoom" />
    <item android:id="@+id/menu_total_times" android:title="@string/totalTimes"/>
    <item android:title="@string/balanceForward" android:id="@+id/menu_balance_forward"/>
    <item
            android:id="@+id/menu_rebuild"
            android:title="Rebuild" />
    <item
            android:id="@+id/menu_edit_aircraft"
            android:title="@string/editAircraft" />
    <!--
    <item
            android:id="@+id/doSomething"
            android:title="DO SOMETHING" />
    -->
</menu>