<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activities.PdfParserActivity">
    <TextView
            android:text="@string/connectingToServer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/connecttingToServerTextView" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="64dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text2" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/connecttingToServerTextView"
            android:text="@string/synchronizing" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="✅"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/connectedCheck" app:layout_constraintStart_toEndOf="@+id/connecttingToServerTextView"
            app:layout_constraintTop_toTopOf="@+id/connecttingToServerTextView" android:visibility="invisible"/>
    <TextView
            android:text="✅"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/synchronizingCheck"
            app:layout_constraintStart_toEndOf="@+id/text2" android:visibility="invisible"
            app:layout_constraintTop_toTopOf="@+id/text2"/>
    <TextView
            android:text="@string/sendingDataToServer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sendingData" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/text2"/>
    <TextView
            android:text="✅"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sendingDataCheck" app:layout_constraintStart_toEndOf="@+id/sendingData"
            app:layout_constraintTop_toTopOf="@+id/sendingData" android:visibility="invisible"/>
    <TextView
            android:text="@string/receivingData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView28" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/sendingData"/>
    <TextView
            android:text="✅"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/receivingDataCheck" app:layout_constraintStart_toEndOf="@+id/textView28"
            app:layout_constraintTop_toTopOf="@+id/textView28" android:visibility="invisible"/>
</androidx.constraintlayout.widget.ConstraintLayout>