<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:background="#60000000"
        android:id="@+id/airportPickerLayout">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/airportPickerDialogLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/rounded_corners"
            android:elevation="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.245">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/airportsDialogTopHalf"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/top_corners"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:id="@+id/registrationText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/pickAirports"
                    android:textColor="?attr/android:textColorPrimaryInverse"
                    android:textSize="36sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout16"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/rounded_corners_white"
                app:layout_constraintEnd_toStartOf="@+id/setCurrentTextButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/airportsDialogTopHalf">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/airportsSearchField"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/search"
                    android:includeFontPadding="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/airportsPickerList"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_corners_white"
                android:elevation="9dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout16" />

        <TextView
                android:id="@+id/cancelAirportDialog"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginStart="32dp"
                android:gravity="center"
                android:text="@android:string/cancel"
                android:textAllCaps="true"
                android:textColor="?attr/colorAccent"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/saveTextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/saveAirportDialog" />

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_corners_white"
                android:elevation="9dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/airportsPickerList">

            <TextView
                    android:id="@+id/latLonField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="52.174N, 003.122E"
                    android:textColor="?attr/android:textColorTertiary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/cityAirportNameField"
                    app:layout_constraintTop_toBottomOf="@+id/cityAirportNameField" />

            <TextView
                    android:id="@+id/cityAirportNameField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Amsterdam, Schiphol Airport"
                    android:textColor="?attr/android:textColorTertiary"
                    app:layout_constraintStart_toStartOf="@+id/icaoIataField"
                    app:layout_constraintTop_toBottomOf="@+id/icaoIataField" />

            <TextView
                    android:id="@+id/icaoIataField"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:text="EHAM/AMS"
                    android:textColor="?attr/android:textColorTertiary"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <TextView
                    android:id="@+id/altitudeField"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:text="alt: -22'"
                    android:textColor="?attr/android:textColorTertiary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/latLonField" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
                android:id="@+id/saveAirportDialog"
                android:layout_width="100dp"
                android:layout_height="30dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@android:string/ok"
                android:textAllCaps="true"
                android:textColor="?attr/colorAccent"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

        <Button
                android:id="@+id/setCurrentTextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/setThis"
                app:layout_constraintBottom_toBottomOf="@+id/textInputLayout16"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textInputLayout16" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>